Stencil Brush misalligned #56012

Closed
opened 2018-07-17 14:52:39 +02:00 by Julien Kaspar · 8 comments
Member

Blender Version
Broken: 2.8 dc3b3d9453

Short description of error
When painting with a stencil texture in texture paint mode, the texture is always slightly misaligned.
Here's a simple file setup as an example: bug_report.blend

**Blender Version** Broken: 2.8 dc3b3d94538 **Short description of error** When painting with a stencil texture in texture paint mode, the texture is always slightly misaligned. Here's a simple file setup as an example: [bug_report.blend](https://archive.blender.org/developer/F3978160/bug_report.blend)
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar

Added subscriber: @mont29

Added subscriber: @mont29

Am not an expert in that area, but looks to me like you somehow transformed your mask texture - clicking 'reset transform' button in its mapping props put it back to same place as what I get by default (in both 2.8 and 2.79).

Am not an expert in that area, but looks to me like you somehow transformed your mask texture - clicking 'reset transform' button in its mapping props put it back to same place as what I get by default (in both 2.8 and 2.79).
Author
Member

@mont29 The point of using a stencil texture is to move it around ;)
Reseting the transforms just puts it back to the original position but doesn't fix the issue.
The problem I have is that once I start painting, the texture doesn't match with what I am painting:
bug_report-2018-07-26_11.27.37.mp4

@mont29 The point of using a stencil texture is to move it around ;) Reseting the transforms just puts it back to the original position but doesn't fix the issue. The problem I have is that once I start painting, the texture doesn't match with what I am painting: [bug_report-2018-07-26_11.27.37.mp4](https://archive.blender.org/developer/F4045446/bug_report-2018-07-26_11.27.37.mp4)
Campbell Barton was assigned by Bastien Montagne 2018-08-05 09:04:16 +02:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Ah OK, see the issue now, thanks. @ideasman42 think you are familiar with this code?

Ah OK, see the issue now, thanks. @ideasman42 think you are familiar with this code?

This issue was referenced by 38e08ec66b

This issue was referenced by 38e08ec66bb4d05d530cc57f1a9a7c79470000b0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56012
No description provided.