Fix T56012: brush stencil overlay draws in the wrong location.